# storage/api-docs/api-docs.json
@@ -45,6 +45,14 @@
                                                 "author": {
                                                     "type": "string"
                                                 },
+                                                "scheduled_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "published_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
                                                 "created_at": {
                                                     "type": "string",
                                                     "format": "date-time"
@@ -93,6 +101,14 @@
                                                 },
                                                 "author": {
                                                     "type": "string"
+                                                },
+                                                "scheduled_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "published_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
                                                 },
                                                 "created_at": {
                                                     "type": "string",
@@ -163,6 +179,14 @@
                                                 },
                                                 "author": {
                                                     "type": "string"
+                                                },
+                                                "scheduled_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "published_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
                                                 },
                                                 "created_at": {
                                                     "type": "string",
@@ -249,6 +273,14 @@
                                                 },
                                                 "author": {
                                                     "type": "string"
+                                                },
+                                                "scheduled_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "published_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
                                                 },
                                                 "created_at": {
                                                     "type": "string",
